<resources>
    <string name="app_name">Gosei Webshop</string>

    <string name="loading">Loading...</string>

    <string name="my_cart">My Cart</string>
    <string name="shopping_catalog">Shopping Catalog</string>
    <string name="contact">Contact</string>
    <string name="about">About</string>

    <string name="all_products">All Products</string>
    <string name="vacuum_cleaners">Vacuum Cleaners</string>
    <string name="cameras">Cameras</string>
    <string name="smart_watches">Smart Watches</string>
    <string name="sensors">Sensors</string>

    <string name="contact_text_mail">Our staff will be happy to help you via e-mail. It usually takes an hour for us to respond.</string>
    <string name="contact_mail">contact@gosei.com</string>
    <string name="contact_text_phone">You can call us Mon - Fri from 9:00 AM to 5:00 PM.</string>
    <string name="contact_phone">+123 45 56 789</string>
    <string name="contact_text_location">If you want to talk to one of our agents, you can visit us at the location below:</string>
    <string name="contact_location">Vukovarska ulica 31, 31 000 Osijek</string>
    <string name="contact_text_social_media">Follow us on our social media!</string>

    <string name="description_underlined"><u>Description</u></string>
    <string name="details_underlined"><u>Details</u></string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="has_been_added_to_your_cart">has been added to your Cart.</string>

    <string name="about_text">This application is an Android Application variant for the Gosei Webshop.</string>
    <string name="about_external">External Dependencies: Retrofit, Retrofit JSON Converter and Picasso</string>
    <string name="about_copyright">© 2021, Gosei\nAll rights reserved</string>
</resources>