<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:padding="20dp"
    android:background="@color/background_gray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo_android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_android"
            android:adjustViewBounds="true"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_text"
            android:textSize="20sp"
            android:textColor="@color/dark_blue"
            android:layout_marginBottom="10dp"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_external"
            android:textSize="20sp"
            android:textColor="@color/dark_blue"
            android:layout_marginBottom="10dp"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_copyright"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/dark_blue"
            android:layout_marginBottom="10dp"
            android:textAlignment="center"/>

    </LinearLayout>

</ScrollView>