<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:src="@drawable/logo_mail"
                android:adjustViewBounds="true"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:text="@string/contact_text_mail"
                android:textSize="20dp"
                android:textColor="@color/dark_blue"
                android:textStyle="bold"
                android:gravity="center|left"
                android:paddingLeft="5dp"/>
        </LinearLayout>
        <Button
            android:id="@+id/button_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_mail"
            android:backgroundTint="@color/dark_blue"
            android:textColor="@color/background_gray"
            android:textStyle="bold"
            android:layout_margin="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:src="@drawable/logo_phone"
                android:adjustViewBounds="true"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:text="@string/contact_text_phone"
                android:textSize="20dp"
                android:textColor="@color/dark_blue"
                android:textStyle="bold"
                android:gravity="center|left"
                android:paddingLeft="5dp"/>
        </LinearLayout>
        <Button
            android:id="@+id/button_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_phone"
            android:backgroundTint="@color/dark_blue"
            android:textColor="@color/background_gray"
            android:textStyle="bold"
            android:layout_margin="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:src="@drawable/logo_location"
                android:adjustViewBounds="true"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:text="@string/contact_text_location"
                android:textSize="20dp"
                android:textColor="@color/dark_blue"
                android:textStyle="bold"
                android:gravity="center|left"
                android:paddingLeft="5dp"/>
        </LinearLayout>
        <Button
            android:id="@+id/button_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_location"
            android:backgroundTint="@color/dark_blue"
            android:textColor="@color/background_gray"
            android:textStyle="bold"
            android:layout_margin="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_text_social_media"
            android:textSize="25dp"
            android:textColor="@color/dark_blue"
            android:textStyle="bold"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:weightSum="3">

            <ImageView
                android:id="@+id/image_fb"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:src="@drawable/facebook"
                android:adjustViewBounds="true"/>
            <ImageView
                android:id="@+id/image_tw"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:src="@drawable/twitter"
                android:adjustViewBounds="true"/>
            <ImageView
                android:id="@+id/image_ig"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:src="@drawable/instagram"
                android:adjustViewBounds="true"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>