<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/background_dark_gray"

    android:weightSum="9"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@drawable/logo_transparent"
        android:adjustViewBounds="true"
        android:background="@color/background_gray"/>

    <LinearLayout
        android:id="@+id/navigation_my_cart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/logo_my_cart"
            android:adjustViewBounds="true"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/my_cart"

            android:textSize="32sp"
            android:textColor="@color/dark_blue"
            android:textStyle="bold"

            android:paddingLeft="10dp"
            android:gravity="center|left"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/navigation_shopping_catalog"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:padding="10dp"
        android:clickable="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/logo_shopping_catalog2"
            android:adjustViewBounds="true"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/shopping_catalog"

            android:textSize="32sp"
            android:textColor="@color/dark_blue"
            android:textStyle="bold"

            android:paddingLeft="10dp"
            android:gravity="center|left"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/navigation_contact"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/logo_phone"
            android:adjustViewBounds="true"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/contact"

            android:textSize="32sp"
            android:textColor="@color/dark_blue"
            android:textStyle="bold"

            android:paddingLeft="10dp"
            android:gravity="center|left"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/navigation_about"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/logo_info"
            android:adjustViewBounds="true"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/about"

            android:textSize="32sp"
            android:textColor="@color/dark_blue"
            android:textStyle="bold"

            android:paddingLeft="10dp"
            android:gravity="center|left"/>
    </LinearLayout>
</LinearLayout>